[package]
name = "sitemapper"
version = "0.1.0"
edition = "2021"
authors = ["Adam <adam@postalproduction.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
rayon = "1.7.0"
reqwest = { version="0.11.14",features = ["blocking"] }
scraper = "0.15.0"
url = "2.3.1"
